--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>Java-Concurrent</module>
         <module>Netty</module>
         <module>IM</module>
+        <module>Netty</module>
+        <module>MQ</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
